--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ logging.level.org.springframework = debug
 
 spring.security.user.name=lox
 spring.security.user.password=pidor
+
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
+spring.datasource.platform=h2
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.path=/db
