--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 server.port=1488
 logging.level.org.springframework = debug
 
-spring.security.user.name=lox
-spring.security.user.password=pidor
 
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
 spring.datasource.platform=h2
@@ -10,3 +8,9 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/db
+
+jwt.signing.key.secret=mySecret
+jwt.get.token.uri=/authenticate
+jwt.refresh.token.uri=/refresh
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
